test:first commit

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@minimal/material-kit-react",
-  "author": "minimals.cc",
+  "name": "famkit",
+  "author": "",
   "licence": "MIT",
   "version": "1.7.0",
   "private": false,
