--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,10 +4,6 @@
     "module": "commonjs",
     "baseUrl": "."
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*", "webpack.config.js", "src/setupProxy.js", "src/config.js"],
+  "exclude": ["node_modules"]
 }
